--- a/src/app/test-bed/test-bed.component.html
+++ b/src/app/test-bed/test-bed.component.html
@@ -1,4 +1,4 @@
-<div NgTheme="background-color:background">
+<div id="container" NgTheme="background-color:primary">
 
   <h1 [style.color]="theme.currentTheme.primaryText">{{title}}</h1>
   <h3 [style.color]="theme.currentTheme.secondaryText">{{title}}</h3>
